kubernetes/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "webhook-test.default.svc"
webhooks:
- name: "webhook-test.default.svc"
  rules:
  - apiGroups:   [""]
    apiVersions: ["*"]
    operations:  ["*"]
    resources:   ["*"]
    scope:       "*"
  clientConfig:
    service:
      name: webhook-test
      namespace: default
      path: /webhook
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMrekNDQWVPZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFmTVIwd0d3WURWUVFERXhSelpXeG0KTFhOcFoyNWxaQzFyT0hNdFkyVnlkREFlRncweU1qRXhNalV5TXpJMU5URmFGdzB6TWpFeE1qSXlNekkxTlRGYQpNQjh4SFRBYkJnTlZCQU1URkhObGJHWXRjMmxuYm1Wa0xXczRjeTFqWlhKME1JSUJJakFOQmdrcWhraUc5dzBCCkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXZLOTJYeVM2YWhoMlUxa2M0Z1BpK2dUdDJUTHQvTng0UERNSkR4T0QKNUw0LzdnYy92MzcvTStEaGZ5U1hkN2tQMUNVWVVVdGZkSnNVUE9NMXRDU0FIRUEzZ0J3VjcyUGxCa1ZSVnpxUwo4bVF3SVBQZ3EwM [...]
  admissionReviewVersions: ["v1"]
  failurePolicy: Ignore
  sideEffects: None
  timeoutSeconds: 5
---
apiVersion: v1
kind: Pod
metadata:
  name: webhook-test
  namespace: default
  labels:
    app: webhook-test
spec:
  containers:
  - name: webhook-container
    imagePullPolicy: Never
    image: docker.io/library/test:12
    ports:
    - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-test
spec:
  selector:
    app: webhook-test
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8000
